tests/pass/mostra_escape_braces.kl
// Verify that \{ and \} in f-strings produce literal braces and are NOT treated
// as interpolation placeholders.
// Expected output: "42 and {}"
fn inisiu() {
    nter n = 42;
    mostran(f"{n} and \{\}");
}
