tests/fail/fail_mostra_malformed_interpolation.kl
// ERROR: Empty and malformed interpolations in f-string
fn inisiu() {
    mostra(f"{}");
    mostran(f'{');
}